--- a/estilo.css
+++ b/estilo.css
@@ -188,7 +188,8 @@ section {
 #boxflag {
     width: 110px;
     height: 60px;
-    transform: translateY(-4%);
+    transform: translateY(-6%);
+    margin-bottom: -3%;
 }
 .containerleft {
     float: left;
