--- a/estilo.css
+++ b/estilo.css
@@ -180,6 +180,8 @@ section {
 }
 #deepl {
     color: #0061b1;
+    font-style: italic;
+    font-weight: bold;
 }
 #flag {
     transform: translateY(35%);
